# rpbo-practis2

./: .gitignore  CMakeLists.txt  DEMO_GUIDE.md  README.md
.github/workflows/: build.yml
installer/: Product.wxs  build.ps1  license.rtf
scripts/: convert_icon.ps1  install_service.ps1  test_lab4.ps1  test_lab5.ps1  test_lab6.ps1
src/: app.qrc  app.rc  main.cpp  rbpo_rpc_constants.h  resource.h
src/rpc/: rbpo_rpc.acf  rbpo_rpc.idl
src/service/: av_db_io.cpp  av_db_io.h  av_engine.cpp  av_engine.h  http_client.cpp  http_client.h  json_util.cpp  json_util.h  service_main.cpp  state.cpp  state.h
